--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,11 @@
     "importHelpers": true
   },
   "exclude": ["dist", ".next", "out", "next.config.js"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../pages/api/cors.js"]
+  "include": [
+    "next-env.d.ts",
+    "additional.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "../pages/api/cors.js"
+  ]
 }
