--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/parse": "^2.18.10",
     "@walletconnect/web3-provider": "^1.6.5",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.1",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
@@ -42,7 +43,7 @@
     "framer-motion": "^4",
     "fs": "^0.0.1-security",
     "moment": "^2.29.1",
-    "moralis": "^0.0.184",
+    "moralis": "^1.0.1",
     "next": "11.1.2",
     "parse": "^3.3.0",
     "react": "17.0.2",
@@ -54,9 +55,11 @@
     "react-scripts": "4.0.1",
     "shortid": "^2.2.16",
     "simple-peer": "^9.11.0",
-    "socket.io": "^4.2.0",
-    "socket.io-client": "^4.2.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "twind": "^0.16.16",
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v20.4.0",
+    "uwebsockets-express": "^1.2.1",
     "video.js": "^7.14.3",
     "videojs-youtube": "^2.6.1",
     "web-vitals": "^0.2.4"
