--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "simple-peer": "^9.11.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
+    "string_decoder": "^1.3.0",
     "twind": "^0.16.16",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v20.4.0",
     "uwebsockets-express": "^1.2.1",
